# PairS

./: .gitignore  example.py  messages.pkl  pyproject.toml  sort_arguments.ipynb
.git_/: config  index  packed-refs
.git_/logs/: HEAD
.git_/objects/pack/: pack-3f497be0347699050979ef702dcadd15aa6a6ec1.idx
.git_/refs/heads/: main
data/honours/: prepared_arguments.csv  prepared_arguments.pkl  prepared_arguments_altogether.csv  prepared_arguments_altogether.pkl  processed_arguments.pkl  ranked_arguments.csv  ranked_arguments.pkl  trimmed_claims.csv
data/honours/processed_arguments/: strategy=PairsBeam_engine=gpt-3.5-turbo_calibrate=False.pkl  strategy=PairsBeam_engine=gpt-4o_calibrate=False.pkl  strategy=PairsGreedy_engine=gpt-3.5-turbo_calibrate=False.pkl  strategy=PairsGreedy_engine=gpt-3.5-turbo_calibrate=False_prompt=customised.csv  strategy=PairsGreedy_engine=gpt-3.5-turbo_calibrate=True.pkl  strategy=PairsGreedy_engine=gpt-4o-mini_calibrate=False.pkl  strategy=PairsGreedy_engine=gpt-4o-mini_calibrate=True.csv  strategy=PairsGreedy_engine=gpt-4o_calibrate=False.csv  strategy=PairsGreedy_engine=gpt-4o_calibrate=True.pkl  strategy=PairsGreedy_engine=gpt-4o_calibrate=True_.csv
data/honours/ranked_arguments/: strategy=PairsBeam_engine=gpt-3.5-turbo_calibrate=False.csv  strategy=PairsBeam_engine=gpt-3.5-turbo_calibrate=False.pkl  strategy=PairsBeam_engine=gpt-4o_calibrate=False.csv  strategy=PairsBeam_engine=gpt-4o_calibrate=False.pkl  (+18 more)
notebooks/: SummEval_example.ipynb  persuasion.ipynb
pairs/: openai_model.py
scripts/: sorting.py
