[tool.poetry]
name = "pairs"
version = "0.1.0"
description = ""
authors = ["Mitchell Moore <u6666820@anu.edu.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
openai = "^1.43.0"
scipy = "^1.14.1"
scikit-learn = "^1.5.1"
transformers = "^4.44.2"
torch = "2.2.0"
numpy = "^1"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
